--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-to-print": "2.14.6",
     "simple-react-lightbox": "3.6.9-0",
+    "swiper": "^11.0.5",
     "typescript": "4.4.4",
     "universal-cookie": "4.0.4",
     "web-vitals": "1.1.2",
