--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/jest": "26.0.24",
     "@types/node": "12.20.37",
     "@types/react": "17.0.34",
+    "@types/react-big-calendar": "^1.8.5",
     "@types/react-dom": "17.0.11",
     "axios": "0.24.0",
     "formik": "2.2.9",
     "react": "^17.0.2",
+    "react-big-calendar": "^1.8.5",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
     "react-scripts": "^5.0.1",
